syntax = "proto3";

package auth;

option go_package = "server/internal/infrastructure/messaging/dto";

message GetOIDCConfigRequest {}

message GetOIDCConfigResponse {
  string clientID = 1;
  string providerURL = 2;
  string redirectURL = 3;
}

message CheckAuthMethodsRequest {}

message CheckAuthMethodsResponse {
  bool oidc = 1;
  bool userPass = 2;
}

service AuthService {
  rpc GetOIDCConfig (GetOIDCConfigRequest) returns (GetOIDCConfigResponse);
  rpc CheckAuthMethods (CheckAuthMethodsRequest) returns (CheckAuthMethodsResponse);
}